--- a/LibLogging/LibLogging.vcxproj
+++ b/LibLogging/LibLogging.vcxproj
@@ -96,7 +96,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <FloatingPointModel>Precise</FloatingPointModel>
       <TreatSpecificWarningsAsErrors>4834</TreatSpecificWarningsAsErrors>
     </ClCompile>
@@ -124,6 +124,9 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib>
+      <AdditionalDependencies>Shlwapi.lib</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -137,7 +140,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <TreatSpecificWarningsAsErrors>4834</TreatSpecificWarningsAsErrors>
     </ClCompile>
     <Link>
@@ -170,13 +173,24 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib>
+      <AdditionalDependencies>Shlwapi.lib</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Common\sysUtils_Impl\CPU.cpp" />
+    <ClCompile Include="..\Common\sysUtils_Impl\fs.cpp" />
+    <ClCompile Include="..\Common\sysUtils_Impl\OSutils.cpp" />
+    <ClCompile Include="..\Common\sysUtils_Impl\String.cpp" />
     <ClCompile Include="..\fmt\src\format.cc" />
     <ClCompile Include="..\fmt\src\os.cc" />
     <ClCompile Include="LibLogging.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Common\sysUtils_Impl\CPU.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\fs.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\OSutils.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\String.h" />
     <ClInclude Include="LibLogging.h" />
     <ClInclude Include="LoggingClass.h" />
     <ClInclude Include="LoggingTypes.h" />
