--- a/LogoControl/LogoControl.vcxproj
+++ b/LogoControl/LogoControl.vcxproj
@@ -90,7 +90,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NOMINMAX;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -106,7 +106,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NOMINMAX;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -123,7 +123,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NOMINMAX;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -139,7 +139,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NOMINMAX;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -153,7 +153,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Common\HTTP Server\HTTPServer2.cpp" />
+    <ClCompile Include="..\Common\sysUtils_Impl\CPU.cpp" />
+    <ClCompile Include="..\Common\sysUtils_Impl\fs.cpp" />
+    <ClCompile Include="..\Common\sysUtils_Impl\OSutils.cpp" />
+    <ClCompile Include="..\Common\sysUtils_Impl\String.cpp" />
     <ClCompile Include="..\Common\WebsocketClient\easywsclient.cpp" />
+    <ClCompile Include="ControllerClass.cpp" />
     <ClCompile Include="LogoClass.cpp" />
     <ClCompile Include="LogoControl.cpp" />
   </ItemGroup>
@@ -163,7 +169,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Common\HTTP Server\HTTPServer2.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\CPU.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\fs.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\OSutils.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\pbn_concurent_queue.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\pbn_concurrency.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\stl_utils.h" />
+    <ClInclude Include="..\Common\sysUtils_Impl\String.h" />
     <ClInclude Include="..\Common\WebsocketClient\easywsclient.hpp" />
+    <ClInclude Include="BoardAPIModel.h" />
+    <ClInclude Include="ControllerClass.h" />
     <ClInclude Include="LogoClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
