--- a/LogoControlPlugin/LogoControlPlugin.vcxproj
+++ b/LogoControlPlugin/LogoControlPlugin.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="Interfaces.h" />
     <ClInclude Include="LogoControlPlugin.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
@@ -198,6 +199,9 @@
     <ProjectReference Include="..\LibLogging\LibLogging.vcxproj">
       <Project>{04399cae-d1ab-45c0-a843-21936cdbccb6}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="LogoControlPlugin.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
