--- a/LogoControlPlugin/LogoControlPlugin.vcxproj.filters
+++ b/LogoControlPlugin/LogoControlPlugin.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Interfaces.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LogoControlPlugin.cpp">
@@ -44,5 +47,10 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="LogoControlPlugin.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
