--- a/LogoControl/LogoControl.vcxproj.filters
+++ b/LogoControl/LogoControl.vcxproj.filters
@@ -104,11 +104,19 @@
     <ClInclude Include="LogoSel.h">
       <Filter>LogoClass</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
     <None Include="content\index.html">
       <Filter>content</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="LogoControl.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
